--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,20 @@
 /* styles.css */
-.gradientbackground {
-    background: lineargradient(45deg, #f3ec78, #af4261, #00a6ed, #00f2c8);
-}
+body{
+background:linear-gradient（-45deg,#ee7752,#e73c7e,#23a6d5,#23d5ab）；
+background-size:1000% 1000%;
+   animation:gradient 15s ease infinite；
+    @keyframes gradient{
+        0%{
+           background-position:0% 50%；
+           }
+          50%{
+            background-position:100% 50%
+            }
+           100%{
+                background-position:0% 50%;
+                }
+               }
+                a{
+                text-decoration:none；
+                 color:rgb(85,80,80)；
+                  }
