--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0; /* 去除页面默认的外边距 */
   padding: 0; /* 去除页面默认的内边距 */
-  background-image: url(&#39;背景图片的URL&#39;); /* 设置背景图的URL */
+  background-image: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500); /* 设置背景图的URL */
   background-size: cover; /* 背景图覆盖整个页面 */
   background-position: center; /* 背景图居中显示 */
   background-repeat: no-repeat; /* 背景图不重复 */
