--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,24 @@
-body {
-  margin: 0; /* 去除页面默认的外边距 */
-  padding: 0; /* 去除页面默认的内边距 */
-  background-image: url(https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500); /* 设置背景图的URL */
-  background-size: cover; /* 背景图覆盖整个页面 */
-  background-position: center; /* 背景图居中显示 */
-  background-repeat: no-repeat; /* 背景图不重复 */
-}
+
+body{
+
+/*加载背景图*/
+
+background-image：url（https://img2.baidu.com/it/u=1873925721,383727792&fm=253&fmt=auto&app=138&f=JPEG?w=889&h=500）;
+
+/* 背景图垂直、水平均居中 */
+
+background-position: center center;
+
+/* 背景图不平铺 */
+
+background-repeat: no-repeat;
+
+/* 当内容高度大于图片高度时，背景图像的位置相对于viewport固定 */
+
+background-attachment: fixed;  //此条属性必须设置否则可能无效/
+
+/* 让背景图基于容器大小伸缩 */
+
+background-size: cover;
+
+/* 设置背景颜色，背景图加载过程中会显示背景色 */
