--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,5 @@ body {
    background-color: #c670ca;
    background-image: linear-gradient(45deg, #c670ca 0%, #25a5c8 52%, #20e275 90%);
 background-size:1000% 1000%;
+animation:gradient 15s ease infinite;
 }
